CREATE DATABASE Quanlyhanghoa;
USE Quanlyhanghoa;

CREATE TABLE LOAIHANG (
    loaihh VARCHAR(20) PRIMARY KEY,
    tenloaihh NVARCHAR(50) NOT NULL,
    mota NVARCHAR(50)
);

CREATE TABLE HANGHOA (
    mahh VARCHAR(10) PRIMARY KEY,
    tenhh NVARCHAR(50) NOT NULL,
    dongia INT NOT NULL,
    xuatxu NVARCHAR(30),
    loaihh VARCHAR(20)
);
CREATE TABLE NHANVIEN (
    manv VARCHAR(10) PRIMARY KEY,
    tennv NVARCHAR(50) NOT NULL,
    email VARCHAR(30)
);

CREATE TABLE TAIKHOAN (
    tendn NVARCHAR(30) PRIMARY KEY,
    matkhau VARCHAR(15) NOT NULL,
    quyen VARCHAR(20) -- quyền: admin, user,...
);

CREATE TABLE KHACHHANG (
    makh VARCHAR(10) PRIMARY KEY,
    tenkh NVARCHAR(30) NOT NULL,
    sdt VARCHAR(11),
    loaikh NVARCHAR(5)
);

CREATE TABLE HOADON (
    mahd VARCHAR(10) PRIMARY KEY,
    makh VARCHAR(10) NOT NULL,
    ngaylaphd DATE NOT NULL,
    FOREIGN KEY (makh) REFERENCES KHACHHANG(makh)
);

CREATE TABLE CHITIETHOADON (
    mahd VARCHAR(10) NOT NULL,
    mahh VARCHAR(10) NOT NULL, -- Đảm bảo dòng này là VARCHAR(10)
    soluong INT NOT NULL,
    PRIMARY KEY (mahd, mahh),
    FOREIGN KEY (mahd) REFERENCES HOADON(mahd),
    FOREIGN KEY (mahh) REFERENCES HANGHOA(mahh)
);

-- Thêm tài khoản mẫu
INSERT INTO TAIKHOAN(tendn, matkhau, quyen)
VALUES('admin', 'admin123', 'admin'),
      ('nhanvien1', 'nv123', 'user'),
      ('user1', 'user123', 'user');
DROP TABLE IF EXISTS CHITIETHOADON;
DROP TABLE IF EXISTS HOADON;
DROP TABLE IF EXISTS KHACHHANG;
DROP TABLE IF EXISTS HANGHOA;
DROP TABLE IF EXISTS LOAIHANG;
DROP TABLE IF EXISTS NHANVIEN;
DROP TABLE IF EXISTS NHACUNGCAP;
CREATE TABLE NHACUNGCAP (
    maNCC VARCHAR(10) PRIMARY KEY,
    tenNCC NVARCHAR(50) NOT NULL,
    diaChi NVARCHAR(255),
    soDienThoai VARCHAR(11)
);
ALTER TABLE HANGHOA
ADD maNCC VARCHAR(10);

ALTER TABLE HANGHOA
ADD CONSTRAINT FK_Hanghoa_NhaCungCap
FOREIGN KEY (maNCC) REFERENCES NHACUNGCAP(maNCC);
ALTER TABLE HANGHOA
DROP CONSTRAINT FK_Hanghoa_NhaCungCap;
ALTER TABLE HANGHOA
DROP COLUMN maNCC;