# Generated by Django 6.0.2 on 2026-04-01 08:21

import django.db.models.deletion
import modules.store.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='ChuoiCuaHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=100, verbose_name='Tên chuỗi cửa hàng')),
                ('mo_ta', models.TextField(blank=True, verbose_name='Mô tả')),
                ('logo', models.ImageField(blank=True, null=True, upload_to='logo/', verbose_name='Logo chuỗi')),
            ],
            options={
                'verbose_name': 'Chuỗi cửa hàng',
                'verbose_name_plural': 'Chuỗi cửa hàng',
            },
        ),
        migrations.CreateModel(
            name='GopYKhachHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ho_ten', models.CharField(max_length=120, verbose_name='Họ tên')),
                ('email', models.EmailField(max_length=254, verbose_name='Email')),
                ('so_dien_thoai', models.CharField(blank=True, max_length=20, verbose_name='Số điện thoại')),
                ('chu_de', models.CharField(max_length=150, verbose_name='Chủ đề')),
                ('noi_dung', models.TextField(verbose_name='Nội dung góp ý')),
                ('da_phan_hoi', models.BooleanField(default=False, verbose_name='Đã phản hồi')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Thời gian tạo')),
            ],
            options={
                'verbose_name': 'Góp ý khách hàng',
                'verbose_name_plural': 'Góp ý khách hàng',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='NhaCungCap',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=120, verbose_name='Tên nhà cung cấp')),
                ('ghi_chu', models.TextField(blank=True, verbose_name='Ghi chú')),
            ],
            options={
                'verbose_name': 'Nhà cung cấp',
                'verbose_name_plural': 'Nhà cung cấp',
            },
        ),
        migrations.CreateModel(
            name='NhomSanPham',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=80, unique=True, verbose_name='Tên nhóm sản phẩm')),
            ],
            options={
                'verbose_name': 'Nhóm sản phẩm',
                'verbose_name_plural': 'Nhóm sản phẩm',
            },
        ),
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('level', models.CharField(default='error', max_length=20, verbose_name='Mức độ')),
                ('title', models.CharField(max_length=200, verbose_name='Tiêu đề')),
                ('message', models.TextField(blank=True, verbose_name='Nội dung')),
                ('path', models.CharField(blank=True, max_length=255, verbose_name='Đường dẫn')),
                ('method', models.CharField(blank=True, max_length=10, verbose_name='Phương thức')),
                ('status_code', models.IntegerField(blank=True, null=True, verbose_name='Mã lỗi')),
                ('resolved', models.BooleanField(default=False, verbose_name='Đã xử lý')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Thời gian')),
            ],
            options={
                'verbose_name': 'Thông báo',
                'verbose_name_plural': 'Thông báo',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ThuongHieu',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=50, unique=True, verbose_name='Tên thương hiệu')),
            ],
            options={
                'verbose_name': 'Thương hiệu',
                'verbose_name_plural': 'Thương hiệu',
            },
        ),
        migrations.CreateModel(
            name='TrashRecord',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('model_label', models.CharField(max_length=100, verbose_name='Model')),
                ('object_id', models.CharField(max_length=64, verbose_name='ID')),
                ('data', models.JSONField(verbose_name='Dữ liệu')),
                ('deleted_at', models.DateTimeField(auto_now_add=True, verbose_name='Thời gian xóa')),
                ('expires_at', models.DateTimeField(default=modules.store.models._trash_expiry, verbose_name='Hết hạn')),
            ],
            options={
                'verbose_name': 'Thùng rác',
                'verbose_name_plural': 'Thùng rác',
                'ordering': ['-deleted_at'],
            },
        ),
        migrations.CreateModel(
            name='CuaHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=100, verbose_name='Tên cửa hàng')),
                ('dia_chi', models.CharField(max_length=255, verbose_name='Địa chỉ')),
                ('quan_huyen', models.CharField(max_length=50, verbose_name='Quận/Huyện')),
                ('vi_do', models.FloatField(verbose_name='Vĩ độ (lat)')),
                ('kinh_do', models.FloatField(verbose_name='Kinh độ (lng)')),
                ('mo_cua', models.TimeField(blank=True, null=True, verbose_name='Giờ mở cửa')),
                ('dong_cua', models.TimeField(blank=True, null=True, verbose_name='Giờ đóng cửa')),
                ('hoat_dong_24h', models.BooleanField(default=False, verbose_name='Hoạt động 24h')),
                ('chuoi', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='gis_store.chuoicuahang', verbose_name='Chuỗi cửa hàng')),
            ],
            options={
                'verbose_name': 'Cửa hàng',
                'verbose_name_plural': 'Cửa hàng',
            },
        ),
        migrations.CreateModel(
            name='DiaChiKhachHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ho_ten_nguoi_nhan', models.CharField(max_length=120, verbose_name='Họ tên người nhận')),
                ('so_dien_thoai', models.CharField(max_length=20, verbose_name='Số điện thoại')),
                ('tinh_thanh', models.CharField(blank=True, max_length=120, verbose_name='Tỉnh/Thành phố')),
                ('quan_huyen', models.CharField(blank=True, max_length=120, verbose_name='Quận/Huyện')),
                ('phuong_xa', models.CharField(blank=True, max_length=120, verbose_name='Phường/Xã')),
                ('dia_chi_cu_the', models.CharField(max_length=255, verbose_name='Địa chỉ cụ thể')),
                ('loai_dia_chi', models.CharField(choices=[('home', 'Nhà riêng'), ('office', 'Văn phòng'), ('other', 'Khác')], default='home', max_length=20, verbose_name='Loại địa chỉ')),
                ('mac_dinh', models.BooleanField(default=False, verbose_name='Địa chỉ mặc định')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Thời gian tạo')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='dia_chi_khach_hang', to=settings.AUTH_USER_MODEL, verbose_name='Tài khoản')),
            ],
            options={
                'verbose_name': 'Địa chỉ khách hàng',
                'verbose_name_plural': 'Địa chỉ khách hàng',
                'ordering': ['-mac_dinh', '-created_at', '-id'],
            },
        ),
        migrations.CreateModel(
            name='DonHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ho_ten_nguoi_nhan', models.CharField(max_length=120, verbose_name='Họ tên người nhận')),
                ('so_dien_thoai', models.CharField(max_length=20, verbose_name='Số điện thoại')),
                ('dia_chi_giao_hang', models.CharField(max_length=255, verbose_name='Địa chỉ giao hàng')),
                ('ghi_chu', models.TextField(blank=True, verbose_name='Ghi chú')),
                ('trang_thai', models.CharField(choices=[('pending', 'Chờ xử lý'), ('confirmed', 'Đã xác nhận'), ('shipping', 'Đang giao'), ('delivered', 'Đã giao'), ('done', 'Hoàn tất'), ('cancelled', 'Đã hủy')], default='pending', max_length=20, verbose_name='Trạng thái')),
                ('tong_so_luong', models.PositiveIntegerField(default=0, verbose_name='Tổng số lượng')),
                ('tong_tien', models.DecimalField(decimal_places=0, default=0, max_digits=12, verbose_name='Tổng tiền')),
                ('created_at', models.DateTimeField(auto_now_add=True, verbose_name='Thời gian tạo')),
                ('khach_hang', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL, verbose_name='Khách hàng')),
            ],
            options={
                'verbose_name': 'Đơn hàng',
                'verbose_name_plural': 'Đơn hàng',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='HoSoKhachHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('avatar', models.ImageField(blank=True, null=True, upload_to='avatar/customers/', verbose_name='Ảnh đại diện')),
                ('so_dien_thoai', models.CharField(blank=True, max_length=20, verbose_name='Số điện thoại')),
                ('dia_chi', models.CharField(blank=True, max_length=255, verbose_name='Địa chỉ')),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='ho_so_khach_hang', to=settings.AUTH_USER_MODEL, verbose_name='Tài khoản')),
            ],
            options={
                'verbose_name': 'Hồ sơ khách hàng',
                'verbose_name_plural': 'Hồ sơ khách hàng',
            },
        ),
        migrations.CreateModel(
            name='NhanVien',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ho_ten', models.CharField(max_length=120, verbose_name='Họ và tên')),
                ('chuc_vu', models.CharField(blank=True, max_length=50, verbose_name='Chức vụ')),
                ('so_dien_thoai', models.CharField(blank=True, max_length=15, verbose_name='Số điện thoại')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='Email')),
                ('dia_chi', models.CharField(blank=True, max_length=255, verbose_name='Địa chỉ')),
                ('avatar', models.ImageField(blank=True, default='avatar/default.jpg', null=True, upload_to='avatar/', verbose_name='Ảnh nhân viên')),
                ('cua_hang', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='gis_store.cuahang', verbose_name='Cửa hàng')),
            ],
            options={
                'verbose_name': 'Nhân viên',
                'verbose_name_plural': 'Nhân viên',
            },
        ),
        migrations.CreateModel(
            name='SanPham',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=120, verbose_name='Tên sản phẩm')),
                ('gia_ban', models.DecimalField(decimal_places=0, default=0, max_digits=12, verbose_name='Giá bán')),
                ('ton_kho', models.PositiveIntegerField(default=0, verbose_name='Tồn kho')),
                ('hinh_anh', models.ImageField(blank=True, null=True, upload_to='images/', verbose_name='Hình ảnh sản phẩm')),
                ('nha_cung_cap', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='gis_store.nhacungcap', verbose_name='Nhà cung cấp')),
                ('nhom_san_pham', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='gis_store.nhomsanpham', verbose_name='Nhóm sản phẩm')),
                ('thuong_hieu', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='gis_store.thuonghieu', verbose_name='Thương hiệu')),
            ],
            options={
                'verbose_name': 'Sản phẩm',
                'verbose_name_plural': 'Sản phẩm',
            },
        ),
        migrations.CreateModel(
            name='HinhAnhSanPham',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('hinh_anh', models.ImageField(blank=True, null=True, upload_to='images/', verbose_name='Ảnh sản phẩm')),
                ('chu_thich', models.CharField(blank=True, max_length=150, verbose_name='Chú thích')),
                ('thu_tu', models.PositiveIntegerField(default=0, verbose_name='Thứ tự')),
                ('san_pham', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='hinh_anh_phu', to='gis_store.sanpham', verbose_name='Sản phẩm')),
            ],
            options={
                'verbose_name': 'Hình ảnh sản phẩm',
                'verbose_name_plural': 'Hình ảnh sản phẩm',
                'ordering': ['thu_tu', 'id'],
            },
        ),
        migrations.AddField(
            model_name='cuahang',
            name='san_pham',
            field=models.ManyToManyField(blank=True, to='gis_store.sanpham', verbose_name='Sản phẩm'),
        ),
        migrations.CreateModel(
            name='ChiTietDonHang',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('so_luong', models.PositiveIntegerField(default=1, verbose_name='Số lượng')),
                ('don_gia', models.DecimalField(decimal_places=0, default=0, max_digits=12, verbose_name='Đơn giá')),
                ('don_hang', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='items', to='gis_store.donhang', verbose_name='Đơn hàng')),
                ('san_pham', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='gis_store.sanpham', verbose_name='Sản phẩm')),
            ],
            options={
                'verbose_name': 'Chi tiết đơn hàng',
                'verbose_name_plural': 'Chi tiết đơn hàng',
            },
        ),
        migrations.CreateModel(
            name='KhuyenMai',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('ten', models.CharField(max_length=150, verbose_name='Tên khuyến mãi')),
                ('mo_ta', models.TextField(blank=True, verbose_name='Mô tả')),
                ('cua_hang', models.ManyToManyField(blank=True, to='gis_store.cuahang', verbose_name='Áp dụng cho cửa hàng')),
                ('thuong_hieu', models.ManyToManyField(blank=True, to='gis_store.thuonghieu', verbose_name='Áp dụng cho thương hiệu')),
            ],
            options={
                'verbose_name': 'Khuyến mãi',
                'verbose_name_plural': 'Khuyến mãi',
            },
        ),
    ]
